--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9Oceania | Expression of interest</title>
+    <title>9Oceania | Services</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="Template by CocoBasic" />
     <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -32,8 +32,8 @@
                         <li>
                             <a href="about.html">About us</a>
                         </li>
-                        <li>
-                            <a href="services.html" class="has-submenu">Services <i class="fa-solid fa-angle-right"></i></a>
+                        <li class="dropdownbtn">
+                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -41,9 +41,6 @@
                                         <li><a class="heading-list" href="#">UX Design</a></li>
                                         <li><a class="heading-list" href="#">UI Design</a></li>
                                         <li><a class="heading-list" href="#">Digital Design</a></li>
-                                        <li><a class="heading-list" href="#">Copywriting</a></li>
-                                        <li><a class="heading-list" href="#">Branding</a></li>
-                                        <li><a class="heading-list" href="#">Print Design</a></li>
                                     </ul>
             
                                     <ul class="second">
@@ -73,8 +70,25 @@
                             <a href="career.html">Careers</a>
                         </li>
                     </ul>
-
+                    <!-- <form role="search" method="get" class="search-form" action="#">
+                        <label>		
+                            <input autocomplete="off" type="search" class="search-field" placeholder="Search" value="" name="s" title="Search for:"> 
+                        </label>    
+                    </form> -->
                 </nav>       
+
+                <!-- <div class="menu-right-text">
+                    <p class="menu-text-title">HELLO</p>
+                    <div class="menu-text">
+                        Welcome to our online art journey. You can read our <a href="blog.html">thoughts</a> or you can simply <a href="contact.html">write to us</a>
+                    </div>
+                    <br>
+                    <br>
+                    <a class="socail-text" href="#">TW.</a>
+                    <a class="socail-text" href="#">FB.</a>
+                    <a class="socail-text" href="#">IN.</a>
+                    <a class="socail-text" href="#">BE.</a>
+                </div> -->
             </div>
         
             <!-- Right Part Sidebar -->
@@ -109,8 +123,8 @@
                             <h2 class="services-heading">Services</h2>
                             <ul class="service-main-list">
                                 <li><a href="#creative-services">Creative</a></li>
-                                <li><a href="#dev-services">Web Development</a></li>
-                                <li><a href="#digital-services">Digital Marketing</a></li>
+                                <li><a href="#dev-services">Web <br> Development</a></li>
+                                <li><a href="#digital-services">Digital <br> Marketing</a></li>
                             </ul>
                         </div>
                     </section>
@@ -133,42 +147,21 @@
                                     <div class="creative-list">
                                         <a href="#"><h4>UX Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/ux-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href="#"><h4>UI Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/ui-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="creative-col">
                                     <div class="creative-list">
                                         <a href="#"><h4>Digital Design</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
-                                    </div>
-                                </div>
-                                <div class="creative-col">
-                                    <div class="creative-list">
-                                        <a href="#"><h4>Copywriting</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
-                                    </div>
-                                </div>
-                                <div class="creative-col">
-                                    <div class="creative-list">
-                                        <a href=""><h4>Branding</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
-                                    </div>
-                                </div>
-                                <div class="creative-col">
-                                    <div class="creative-list">
-                                        <a href="#"><h4>Print Design</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="creative-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="creative-icon"><img src="assets/digital-design.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
@@ -186,35 +179,35 @@
                                     <div class="dev-list">
                                         <a href="#"><h4>WordPress</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/wordpress.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>Webflow</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/webflow.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>eCommerce</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>Shopify</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/shopify.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="dev-col">
                                     <div class="dev-list">
-                                        <a href="#"><h4>WooCommerce</h4></a>
+                                        <a href="#"><h4>WebCommerce</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="dev-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="dev-icon"><img src="assets/webcommerce.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
@@ -233,28 +226,28 @@
                                     <div class="digital-list">
                                         <a href="#"><h4>Google Advertising</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/google-advertising.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
                                         <a href="#"><h4>SEO</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
                                         <a href="#"><h4>Paid Social Advertising</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/paid-social-advertising.jpeg" alt=""></div>
                                     </div>
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
                                         <a href="#"><h4>Organic Social</h4></a>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
-                                        <div class="digital-icon"><i class="fa-solid fa-bolt"></i></div>
+                                        <div class="digital-icon"><img src="assets/organic-social.jpeg" alt=""></div>
                                     </div>
                                 </div>
                             </div>
