--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <li>
                             <a href="about.html">About us</a>
                         </li>
-                        <li>
-                            <a href="services.html" class="has-submenu">Services <i class="fa-solid fa-angle-right"></i></a>
+                        <li class="dropdownbtn">
+                            <a href="services.html">Services <i class="fa-solid fa-angle-right"></i></a>
                             <div class="service-dropdown">
                                 <div class="service-list">
                                     <ul class="first">
@@ -44,9 +44,6 @@
                                         <li><a class="heading-list" href="#">UX Design</a></li>
                                         <li><a class="heading-list" href="#">UI Design</a></li>
                                         <li><a class="heading-list" href="#">Digital Design</a></li>
-                                        <li><a class="heading-list" href="#">Copywriting</a></li>
-                                        <li><a class="heading-list" href="#">Branding</a></li>
-                                        <li><a class="heading-list" href="#">Print Design</a></li>
                                     </ul>
             
                                     <ul class="second">
@@ -61,7 +58,7 @@
                                     <ul class="third">
                                         <li><a class="heading" href="#">Digital Marketing</a></li>
                                         <li><a class="heading-list" href="#">Google Advertising</a></li>
-                                        <li><a class="heading-list" href="seo.html">SEO</a></li>
+                                        <li><a class="heading-list" href="#">SEO</a></li>
                                         <li><a class="heading-list" href="#">Paid Social Advertising</a></li>
                                         <li><a class="heading-list" href="#">Organic Social</a></li>
                                     </ul>
@@ -130,19 +127,11 @@
 
                             <div class="swiper-slide">
                                 <section class="home" id="home">
-                                    <h1>Beyond Boundaries <br> Above Trends</h1>
                                 </section>
                             </div>
 
                             <div class="swiper-slide">
                                 <section class="about-us">
-                                    <div class="left">
-                                        <h3 class="about-title">About Us</h3>
-                                        <p>At 9 Oceania, we navigate the digital frontier with innovation and disrupt the norms to set trends. Merging art with technology, and data with creativity, we architect growth and transformative strategies that elevate brands.  We’re all about building amazing websites, getting your site noticed on search engines, and making sure you're a hit on social media. Imagine us setting sail together, where there’s a whole ocean of possibilities and every wave brings us closer to your goals. Join us, and let’s make your brand as limitless as the ocean.</p>
-                                    </div>
-                                    <div class="right">
-                                        <img src="assets/about.gif" alt="">
-                                    </div>
                                 </section>
                             </div>
 
