--- a/services.html
+++ b/services.html
@@ -192,7 +192,7 @@
                                 <div class="dev-col">
                                     <div class="dev-list">
                                         <a href="#"><h4>eCommerce</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                        <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight. With a client roster that includes some of Australia's most presMgious names, we're here to transform your digital dreams into reality.</p>
                                         <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
                                     </div>
                                 </div>
@@ -231,8 +231,8 @@
                                 </div>
                                 <div class="digital-col">
                                     <div class="digital-list">
-                                        <a href="#"><h4>SEO</h4></a>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                        <a href="seo.html"><h4>SEO</h4></a>
+                                        <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies that ensure your business isn't just visible online — it leads the pack.</p>
                                         <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
                                     </div>
                                 </div>
