--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                         <li><a class="heading-list" href="googleadvertise.html">Google Advertising</a></li>
                                         <li><a class="heading-list" href="seo.html">SEO</a></li>
                                         <li><a class="heading-list" href="socialadvertise.html">Paid Social Advertising</a></li>
-                                        <li><a class="heading-list" href="organicsocial.html">Organic Social</a></li>
+                                        <li><a class="heading-list" href="">Organic Social</a></li>
                                     </ul>
                                 </div>
             
@@ -176,6 +176,9 @@
                                     </div>
                                     <div class="content">
                                         <p>9Oceania is located on the unceded lands of the Wurundjeri Woi Wurrung people. We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
+                                    </div>
+                                    <div class="copyright">
+                                        <p>Copyright © 2024 9Oceania. All rights reserved.</p>
                                     </div>
                                 </section>
                             </div>
