--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 s1.setAttribute('crossorigin','*');
                 s0.parentNode.insertBefore(s1,s0);
             })();
-        }, 3000);
+        }, 3200);
     </script>
     
     <!--End of Tawk.to Script-->
@@ -160,7 +160,10 @@
 
                             <div class="swiper-slide">
                                 <section class="approach">
-                                    <!-- <img src="assets/approach.jpeg" alt=""> -->
+                                    <h3>What we do How we do</h3>
+                                    <div class="approach-img">
+                                        <img src="assets/approach.jpeg" alt="">
+                                    </div>
                                 </section>  
                             </div>
 
