--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 s1.setAttribute('crossorigin','*');
                 s0.parentNode.insertBefore(s1,s0);
             })();
-        }, 3200);
+        }, 3000);
     </script>
     
     <!--End of Tawk.to Script-->
@@ -137,12 +137,6 @@
 
             <!-- Page Content Holder -->
             <div id="content" class="site-content">
-                <!-- <div id="page-indicator">
-                    <span class="dot">Home</span>
-                    <span class="dot">About</span>
-                    <span class="dot">Approach</span>
-                    <span class="dot">Work</span>
-                  </div> -->
                   
                 <div class="content-right">      
                     <div class="horizontal-slider image-slider-wrapper relative">
@@ -179,6 +173,11 @@
                                     </div>
                                     <div class="content">
                                         <p>9Oceania is located on the unceded lands of the Wurundjeri Woi Wurrung people. We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
+                                    </div>
+                                    <div class="contact-details">
+                                        <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
+                                        <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                        <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Australia</div>
                                     </div>
                                     <div class="copyright">
                                         <p>Copyright © 2024 9Oceania. All rights reserved.</p>
