--- a/seo.html
+++ b/seo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>9Oceania | Services</title>
+    <title>9Oceania | SEO</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="Template by CocoBasic" />
     <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -15,6 +15,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
     <link rel="stylesheet" type="text/css"  href='style.css' />
 </head>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6628b5f31ec1082f04e6293b/1hs7gdgbu';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
+
 <body>
 
     <div class="main-container">
@@ -146,11 +161,17 @@
                                 <li><a href="#">Comprehensive Services: <span>Beyond traditional SEO, we o>er a suite of digital marketing services, from email marketing and content creation to comprehensive PPC management and social media strategies.</span></a></li>
                                 <li><a href="#">Proven Success: <span>Our track record speaks volumes. With a strategy focused on results, we've helped businesses across Australia achieve their digital marketing objectives, boosting visibility, tra>ic, and conversions.</span></a></li>
                             </ul>
+                            <div class="contact-details subservice">
+                                <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
+                                <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Australia</div>
+                            </div>
+                            <div class="copyright subservice">
+                                <p>Copyright © 2024 9Oceania. All rights reserved.</p>
+                            </div>
                         </div>
                     </section>
-                    
                 </div>
-    
             </div>
 
         </div>
