--- a/career.html
+++ b/career.html
@@ -147,12 +147,12 @@
                     </div>
                 </div>
 
-                <div class="contact-details">
+                <div class="contact-details responsive">
                     <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
                     <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
                     <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Australia</div>
                 </div>
-                <div class="copyright">
+                <div class="copyright responsive">
                     <p>Copyright © 2024 9Oceania. All rights reserved.</p>
                 </div>
     
