--- a/seo.html
+++ b/seo.html
@@ -133,12 +133,12 @@
             
             <div class="container">
                 <div class="content-wrapper">
-                    <section class="services-main">
-                        <div class="service">
+                    <section class="services-main seo">
+                        <div class="service seo">
                             <div class="service-heading">Services</div>
                             <div class="service-name">SEO</div>
                         </div>
-                        <div class="service-description">
+                        <div class="service-description seo">
                             <div class="description-title">Why SEO?</div>
                             <p class="description-content">SEO stands as the cornerstone of digital visibility. Unlike pay-per-click (PPC)
                                 advertising, SEO focuses on enhancing your website's organic ranking on search
