--- a/index.html
+++ b/index.html
@@ -162,6 +162,23 @@
                             </div>
 
                             <div class="swiper-slide">
+                                <div class="contact-copyright">
+                                    <div class="name-logo">
+                                        <div class="name">9Oceania</div>
+                                        <div class="logo"><img src="assets/logo.png" alt=""></div>
+                                    </div>
+                                    <div class="contact-details">
+                                        <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
+                                        <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                        <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
+                                    </div>
+                                    <div class="copyright">
+                                        <p>Copyright © 2024 9Oceania. All rights reserved.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="swiper-slide">
                                 <section class="work">
                                     <div class="flag-container">
                                         <div class="flag1">
