--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
                             <div class="swiper-slide">
                                 <section class="home" id="home">
+                                    <img src="assets/experimentvideo8.webp" alt="">
                                 </section>
                             </div>
 
