--- a/index.html
+++ b/index.html
@@ -11,25 +11,21 @@
         <!-- <link rel="shortcut icon" href="images/favicon.ico" />     -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
         <link rel="stylesheet" type="text/css"  href='style.css' />
-
-        <!--[if lt IE 9]>
-                <script src="js/html5shiv.js"></script>            
-                <script src="js/respond.min.js"></script>                   
-        <![endif]-->         
+        
     </head>
 
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/6628b5f31ec1082f04e6293b/1hs7gdgbu';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-</script>
+    <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/6628b5f31ec1082f04e6293b/1hs7gdgbu';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
     
     <!--End of Tawk.to Script-->
 
@@ -160,42 +156,33 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <div class="contact-copyright">
-                                    <div class="name-logo">
-                                        <div class="name">9Oceania</div>
-                                        <div class="logo"><img src="assets/logo.png" alt=""></div>
-                                    </div>
-                                    <div class="contact-details">
-                                        <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
-                                        <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
-                                        <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
-                                    </div>
-                                    <div class="copyright">
-                                        <p>Copyright © 2024 9Oceania. All rights reserved.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <section class="work">
-                                    <div class="flag-container">
-                                        <div class="flag1">
-                                            <img src="assets/australian-aboriginal-flag.gif" alt="">
+                                <section class="contact-work">
+                                    <div class="contact-copyright">
+                                        <div class="name-logo">
+                                            <div class="name">9Oceania</div>
+                                            <div class="logo"><img src="assets/logo.png" alt=""></div>
                                         </div>
-                                        <div class="flag2">
-                                            <img src="assets/australian-aboriginal-flag2.gif" alt="">
+                                        <div class="contact-details">
+                                            <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
+                                            <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                            <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
+                                        </div>
+                                        <div class="copyright">
+                                            <p>Copyright © 2024 9Oceania. All rights reserved.</p>
                                         </div>
                                     </div>
-                                    <div class="content">
-                                        <p>9Oceania is located on the unceded lands of the Wurundjeri Woi Wurrung people. We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
-                                    </div>
-                                    <div class="contact-details">
-                                        <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
-                                        <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
-                                        <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Australia</div>
-                                    </div>
-                                    <div class="copyright">
-                                        <p>Copyright © 2024 9Oceania. All rights reserved.</p>
+                                    <div class="work">
+                                        <div class="flag-container">
+                                            <div class="flag1">
+                                                <img src="assets/australian-aboriginal-flag.gif" alt="">
+                                            </div>
+                                            <div class="flag2">
+                                                <img src="assets/australian-aboriginal-flag2.gif" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="content">
+                                            <p>9Oceania is located on the unceded lands of the Wurundjeri Woi Wurrung people. We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
+                                        </div>
                                     </div>
                                 </section>
                             </div>
