--- a/index.html
+++ b/index.html
@@ -148,9 +148,64 @@
 
                             <div class="swiper-slide">
                                 <section class="approach">
-                                    <h3>What we do How we do</h3>
-                                    <div class="approach-img">
-                                        <img src="assets/approach.jpeg" alt="">
+                                    <div class="approach-content">
+                                        <div class="approach-left">
+                                            <div class="expertise-scale">
+                                                <p>Forever a personal touch</p>
+                                            </div>
+                                            <div class="left-title">
+                                                <h1>your on <br> growth <br> story</h1>
+                                            </div>
+                                            <div class="left-para">
+                                                <p>We support established, challenger, and emerging brands all across the globe, scaled to meet each client's needs.</p>
+                                            </div>
+                                        </div>
+                                        <div class="approach-right">
+                                            <div class="approach-numbers">
+                                                <div class="approach-num num1">
+                                                    <div class="num">
+                                                        <div id="count1">
+                                                            50 
+                                                        </div><span>+</span>
+                                                    </div>
+                                                    <hr>
+                                                    <div class="num-name">
+                                                        Happy Clients
+                                                    </div>
+                                                </div>
+                                                <div class="approach-num num2">
+                                                    <div class="num">
+                                                        <div id="count2">
+                                                            200 
+                                                        </div><span>+</span>
+                                                    </div>
+                                                    <hr>
+                                                    <div class="num-name">
+                                                        Websites Deployed
+                                                    </div>
+                                                </div>
+                                                <div class="approach-num num3">
+                                                    <div class="num">
+                                                        <div id="count3">
+                                                            120 
+                                                        </div><span>+</span>
+                                                    </div>
+                                                    <hr>
+                                                    <div class="num-name">
+                                                        Successful Digital Campaign
+                                                    </div>
+                                                </div>
+                                                <div class="approach-num num4">
+                                                    <div class="num">
+                                                        9.7/10
+                                                    </div>
+                                                    <hr>
+                                                    <div class="num-name">
+                                                        Average Client Service Rating 2023
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </section>  
                             </div>
