--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                             </div>
                                         </div>
                                         <div class="content">
-                                            <p>9Oceania is located on the unceded lands of the Wurundjeri Woi Wurrung people. We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
+                                            <p>We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
                                         </div>
                                     </div>
                                 </section>
