--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                                                 <p>Forever a personal touch</p>
                                             </div>
                                             <div class="left-title">
-                                                <h1>your on <br> growth <br> story</h1>
+                                                <h1>your own <br> growth <br> story</h1>
                                             </div>
                                             <div class="left-para">
-                                                <p>We support established, challenger, and emerging brands all across the globe, scaled to meet each client's needs.</p>
+                                                <p>We tell your stories for you.</p>
                                             </div>
                                         </div>
                                         <div class="approach-right">
