--- a/index.html
+++ b/index.html
@@ -215,11 +215,17 @@
                                     <div class="contact-copyright">
                                         <div class="name-logo">
                                             <div class="name">9Oceania</div>
-                                            <div class="logo"><img src="assets/logo.png" alt=""></div>
+                                            <div class="logo"><img src="assets/9oceaniadds-04.svg" alt=""></div>
                                         </div>
                                         <div class="contact-details">
-                                            <a href="tel:9999999999" class="contact-phone"><i class="fa-solid fa-phone"></i>9999999999</a>
-                                            <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                            <div class="contact-num">
+                                                <a href="tel:+61 451645561" class="contact-phone"><i class="fa-solid fa-phone"></i>+61 451645561</a>
+                                                <a href="tel:+61 433863895" class="contact-phone">+61 433863895</a>
+                                            </div>
+                                            <div class="contact-mails">
+                                                <a href="mailto: contact@9oceania.com" class="contact-mail"><i class="fa-solid fa-envelope"></i>contact@9oceania.com</a>
+                                                <a href="mailto: admin@9oceania.com" class="contact-mail">admin@9oceania.com</a>
+                                            </div>
                                             <div class="contact-location"><i class="fa-solid fa-location-dot"></i>Wurundjeri Country <br> 805 233 Collins Street <br> Melbourne VIC 3000</div>
                                         </div>
                                         <div class="copyright">
@@ -239,6 +245,8 @@
                                             <p>We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
                                         </div>
                                     </div>
+                                    <button class="backbtn" onclick="window.location.href='index.html'">Back to Home</button>
+
                                 </section>
                             </div>
 
