--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="CocoBasic" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <!-- <link rel="shortcut icon" href="images/favicon.ico" />     -->
+        <!-- <link rel="shortcut icon" href="assets/logo" />     -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
         <link rel="stylesheet" type="text/css"  href='style.css' />
         
@@ -244,12 +244,12 @@
                                         <div class="content">
                                             <p>We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
                                         </div>
+                                        <a class="contact-btn" href="getintouch.html">Get in touch</a>
                                     </div>
                                 </section>
                             </div>
 
                         </div>
-                        <!-- <a class="contact-btn" href="getintouch.html">Get in touch</a> -->
                     </div>
                 </div>
             </div>             
