--- a/services.html
+++ b/services.html
@@ -162,16 +162,25 @@
                                     <h4>UX Design</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="creative-icon"><img src="assets/ux-design.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="ui.html" class="creative-list">
                                     <h4>UI Design</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="creative-icon"><img src="assets/ui-design.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="digital.html" class="creative-list">
                                     <h4>Digital Design</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="creative-icon"><img src="assets/digital-design.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                             </div>
             
@@ -183,31 +192,86 @@
                         <div class="dev-heading">Web Development</div>
                         <p class="dev-content"> We specialize in creating beautiful, user-friendly websites that captivate audiences and drive results. From sleek, modern designs to fully responsive layouts, we'll work closely with you to bring your vision to life.</p>
                         <div class="dev-sections swiper">
-                            <div class="dev-row swiper-wrapper">
+                            <div class="swiper-wrapper">
                                 <a href="wordpress.html" class="dev-list swiper-slide">
                                     <h4>WordPress</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="dev-icon"><img src="assets/wordpress.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="webflow.html" class="dev-list swiper-slide">
                                     <h4>Webflow</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="dev-icon"><img src="assets/webflow.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="ecommerce.html" class="dev-list swiper-slide">
                                     <h4>eCommerce</h4>
                                     <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight. With a client roster that includes some of Australia's most presMgious names, we're here to transform your digital dreams into reality.</p>
                                     <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="shopify.html" class="dev-col dev-list swiper-slide">
                                     <h4>Shopify</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="dev-icon"><img src="assets/shopify.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="webcommerce.html" class="dev-list swiper-slide">
                                     <h4>WebCommerce</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="dev-icon"><img src="assets/webcommerce.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="wordpress.html" class="dev-list swiper-slide">
+                                    <h4>WordPress</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="dev-icon"><img src="assets/wordpress.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="webflow.html" class="dev-list swiper-slide">
+                                    <h4>Webflow</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="dev-icon"><img src="assets/webflow.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="ecommerce.html" class="dev-list swiper-slide">
+                                    <h4>eCommerce</h4>
+                                    <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight. With a client roster that includes some of Australia's most presMgious names, we're here to transform your digital dreams into reality.</p>
+                                    <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="shopify.html" class="dev-col dev-list swiper-slide">
+                                    <h4>Shopify</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="dev-icon"><img src="assets/shopify.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="webcommerce.html" class="dev-list swiper-slide">
+                                    <h4>WebCommerce</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="dev-icon"><img src="assets/webcommerce.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                             </div>
                             <div class="swiper-button-next"><i class="fa-solid fa-angle-right"></i></div>
@@ -227,21 +291,65 @@
                                     <h4>Google Advertising</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="digital-icon"><img src="assets/google-advertising.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="seo.html" class="digital-list swiper-slide">
                                     <h4>SEO</h4>
                                     <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies that ensure your business isn't just visible online — it leads the pack.</p>
                                     <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="socialadvertise.html" class="digital-list swiper-slide">
                                     <h4>Paid Social Advertising</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="digital-icon"><img src="assets/paid-social-advertising.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                                 <a href="organicsocial.html" class="digital-list swiper-slide">
                                     <h4>Organic Social</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
                                     <div class="digital-icon"><img src="assets/organic-social.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="googleadvertise.html" class="digital-list swiper-slide">
+                                    <h4>Google Advertising</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="digital-icon"><img src="assets/google-advertising.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="seo.html" class="digital-list swiper-slide">
+                                    <h4>SEO</h4>
+                                    <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies that ensure your business isn't just visible online — it leads the pack.</p>
+                                    <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="socialadvertise.html" class="digital-list swiper-slide">
+                                    <h4>Paid Social Advertising</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="digital-icon"><img src="assets/paid-social-advertising.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
+                                <a href="organicsocial.html" class="digital-list swiper-slide">
+                                    <h4>Organic Social</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident asperiores laborum iste cumque commodi accusamus aspernatur sunt itaque quos magni libero minus, adipisci delectus neque dolorem ullam officiis vitae quidem.</p>
+                                    <div class="digital-icon"><img src="assets/organic-social.jpeg" alt=""></div>
+                                    <div class="learn-more">
+                                        Learn more <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
                                 </a>
                             </div>
                             <div class="swiper-button-next"><i class="fa-solid fa-angle-right"></i></div>
