--- a/index.html
+++ b/index.html
@@ -213,9 +213,24 @@
                             <div class="swiper-slide">
                                 <section class="contact-work">
                                     <div class="contact-copyright">
-                                        <div class="name-logo">
-                                            <div class="name">9Oceania</div>
-                                            <div class="logo"><img src="assets/9oceaniadds-04.svg" alt=""></div>
+                                        <div class="logo-contact">
+                                            <div class="logo">
+                                                <img src="assets/9oceaniadds-04.svg" alt="">
+                                            </div>
+                                            <div class="contact-title">
+                                                <h2>Get in touch</h2>
+                                                <hr>
+                                            </div>
+                                            <div class="contact-container">
+                                                <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                                                    <input type="hidden" name="access_key" value="36d3e489-94df-4c5a-b981-9d2c7f9351ad">
+                                                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                                                    <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+                                                    <input type="tel" name="tel" placeholder="Your Number" class="contact-inputs" required>
+                                                    <textarea name="message" placeholder="Your Message" class="contact-inputs textarea" required></textarea>
+                                                    <button type="submit">Contact Us</button>
+                                                </form>
+                                            </div>
                                         </div>
                                         <div class="contact-details">
                                             <div class="contact-num">
@@ -244,7 +259,6 @@
                                         <div class="content">
                                             <p>We acknowledge and respect them as the Traditional Owners of the land on which we work, and pay our respects to their Elders, past and present.</p>
                                         </div>
-                                        <a class="contact-btn" href="getintouch.html">Get in touch</a>
                                     </div>
                                 </section>
                             </div>
