--- a/services.html
+++ b/services.html
@@ -211,7 +211,7 @@
                                 </a>
                                 <a href="ecommerce.html" class="dev-list swiper-slide">
                                     <h4>eCommerce</h4>
-                                    <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight. With a client roster that includes some of Australia's most presMgious names, we're here to transform your digital dreams into reality.</p>
+                                    <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight.</p>
                                     <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
                                     <div class="learn-more">
                                         Learn more <i class="fa-solid fa-arrow-right"></i>
@@ -251,7 +251,7 @@
                                 </a>
                                 <a href="ecommerce.html" class="dev-list swiper-slide">
                                     <h4>eCommerce</h4>
-                                    <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight. With a client roster that includes some of Australia's most presMgious names, we're here to transform your digital dreams into reality.</p>
+                                    <p>In today's rapidly evolving digital landscape, your e-commerce plaLorm is the cornerstone of your business's online presence. Our digital markeMng agency specializes in craNing bespoke e-commerce solutions designed to catapult your brand into the spotlight.</p>
                                     <div class="dev-icon"><img src="assets/ecommerce.jpeg" alt=""></div>
                                     <div class="learn-more">
                                         Learn more <i class="fa-solid fa-arrow-right"></i>
@@ -297,7 +297,7 @@
                                 </a>
                                 <a href="seo.html" class="digital-list swiper-slide">
                                     <h4>SEO</h4>
-                                    <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies that ensure your business isn't just visible online — it leads the pack.</p>
+                                    <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies.</p>
                                     <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
                                     <div class="learn-more">
                                         Learn more <i class="fa-solid fa-arrow-right"></i>
@@ -329,7 +329,7 @@
                                 </a>
                                 <a href="seo.html" class="digital-list swiper-slide">
                                     <h4>SEO</h4>
-                                    <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies that ensure your business isn't just visible online — it leads the pack.</p>
+                                    <p>In the digital era, where every click can turn into a customer, standing out in search engine results isn't just an advantage; it's a necessity. Our Digital Marketing Agency, renowned for elevating prestigious Australian brands, specializes in bespoke SEO strategies.</p>
                                     <div class="digital-icon"><img src="assets/seo.jpeg" alt=""></div>
                                     <div class="learn-more">
                                         Learn more <i class="fa-solid fa-arrow-right"></i>
